# cpp_template

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: main.yml
include/: cpp_template.h
src/: cpp_template.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: test_cpp_template.cpp
